[project]
name = "currency"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "currency", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
